--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: Build and analyze dotnet
+  build1:
+    name: Build and analyze dotnet 10.7
     runs-on: windows-latest
     
     steps:
@@ -46,19 +46,19 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"djuarezg_sonar-scanner-msbuild_d84d1aeb-fe44-4228-94e7-a11a5bb1c546" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" 
           dotnet build CSharpProject/SomeConsoleApplication.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
-  analyze-msbuild:
-    name: Analyze with MSBuild
+  build2:
+    name: Build and analyze dotnet 9.9
     runs-on: windows-latest
     
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'zulu'
+          distribution: 'zulu' # Alternative distribution options are available.
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
@@ -78,11 +78,9 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v2
-      - name: Build and analyze with MSBuild
+      - name: Build and analyze
         shell: powershell
         run: |
-          SonarScanner.MSBuild.exe begin /k:"djuarezg_sonar-scanner-msbuild_d84d1aeb-fe44-4228-94e7-a11a5bb1c546" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" 
-          MSBuild.exe CSharpProject/SomeConsoleApplication.sln /t:Rebuild
-          SonarScanner.MSBuild.exe end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"djuarezg_sonar-scanner-msbuild_d84d1aeb-fe44-4228-94e7-a11a5bb1c546" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" 
+          dotnet build CSharpProject/SomeConsoleApplication.sln
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
