--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,6 @@ jobs:
         shell: powershell
         run: |
           
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"djuarezg_sonar-scanner-msbuild_d84d1aeb-fe44-4228-94e7-a11a5bb1c546" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.links.scm=https://github.com/djuarezg/sonar-scanner-msbuild /d:sonar.links.ci=https://github.com/djuarezg/sonar-scanner-msbuild/actions
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"djuarezg_sonar-scanner-msbuild_d84d1aeb-fe44-4228-94e7-a11a5bb1c546" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.links.scm=https://github.com/djuarezg/sonar-scanner-msbuild /d:sonar.links.ci=https://github.com/djuarezg/sonar-scanner-msbuild/actions /d:"sonar.verbose=true"
           dotnet build CSharpProject/SomeConsoleApplication.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
